Bug 476583 - Layer->Convert to Animated Layer action does nothing
Summary: Layer->Convert to Animated Layer action does nothing
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-05 11:44 UTC by Dmitry Kazakov
Modified: 2024-09-06 22:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2023-11-05 11:44:27 UTC
STEPS TO REPRODUCE
1. Create an image with a paint layer
2. Press Layer->Convert to Animated

OBSERVED RESULT
Nothing happens

EXPECTED RESULT
A frame should appear on the timeline

SOFTWARE/OS VERSIONS
Windows: Windows 11 Pro
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 lverkdv 2023-11-20 18:59:21 UTC
Confirmed, also the "Convert to Animated Layer" option is not present on Krita Version: 5.2.1.
Krita Version: 5.3.0-prealpha (git 207c89b)
Qt : 5.15.7
CPU: x86_64
Pretty Productname: Arch Linux
Desktop: KDE
Comment 2 Dmitry Kazakov 2024-08-22 16:38:55 UTC
Remove triaged keyword from CONFIRMED bugs
Comment 3 Halla Rempt 2024-09-06 11:30:32 UTC
Only group layers are supposed to be convertable to animated, not paint layers, so this is a layer activation conditions issue.
Comment 4 Halla Rempt 2024-09-06 11:56:19 UTC
Though if I test a group layer with one child nothing happens either
Comment 5 Halla Rempt 2024-09-06 12:30:00 UTC
And it says krita.general: Unsupported node conversion type: "animated"... I'm done for today, but I'll look into it again.
Comment 6 Emmet O'Neill 2024-09-06 19:26:50 UTC
Git commit fa805917e12754c9e49368d2b1751023bfda8237 by Emmet O'Neill.
Committed on 06/09/2024 at 19:22.
Pushed by emmetoneill into branch 'master'.

Group Layer: Fix conversion of Group to Animated Layer.

Conversion of a group to a single animated layer was already working,
but users are likely to have a child layer (the one they're working on)
selected, leading to confusing behavior.

We now convert as expected if a group is selected, and
when a non-group child is selected we move up the tree
to the parent group and convert that instead.

This doesn't work with single paint layers, as by design.

M  +13   -7    libs/ui/kis_layer_manager.cc

https://invent.kde.org/graphics/krita/-/commit/fa805917e12754c9e49368d2b1751023bfda8237
Comment 7 Emmet O'Neill 2024-09-06 22:55:50 UTC
Git commit 424f716ea7c25e18c4015e67c7dadfef18673585 by Emmet O'Neill.
Committed on 06/09/2024 at 22:48.
Pushed by emmetoneill into branch 'master'.

LayerBox: Node RClick > Convert > Convert GROUP to Animated Layer

The previous option "Convert to Aniamted Layer" seems to have been
a partially implemented feature, or placeholder or something.

1. I've switched this action with the other, more useful
"Convert Group to Animated Layer" action.

2. For regular non-group PaintLayers, I'm not sure what the value
of converting it to an animated layer is or how that' different
to just adding a keyframe. (Though I can add it if it's something
that someone really needs.)

M  +1    -1    krita/krita.action
M  +0    -1    libs/ui/kis_node_manager.cpp
M  +1    -1    plugins/dockers/layerdocker/LayerBox.cpp

https://invent.kde.org/graphics/krita/-/commit/424f716ea7c25e18c4015e67c7dadfef18673585